@@ -25,7 +25,7 @@ export(Hershey, as.graphicsAnnot, as.raster,
        gray.colors, grey.colors, heat.colors, hsv, hcl, is.raster, make.rgb,
        n2mfrow, nclass.Sturges, nclass.FD, nclass.scott, palette, pdf,
        pdf.options, pdfFonts, pictex, postscript, postscriptFont,
-       postscriptFonts, ps.options, rainbow, raster, recordGraphics,
+       postscriptFonts, ps.options, rainbow, recordGraphics,
        recordPlot, replayPlot, rgb, rgb2hsv, savePlot, setEPS, setPS,
        terrain.colors, topo.colors, trans3d, Type1Font, xfig, xyTable,
        xy.coords, xyz.coords)
