@@ -8,7 +8,7 @@ export(abline, arrows, assocplot, axTicks, Axis, axis, axis.Date,
        image, layout, layout.show, lcm, legend, lines, lines.default,
        locator, matlines, matplot, matpoints, mosaicplot, mtext,
        pairs, panel.smooth, par, persp, pie, plot, plot.design,
-       plot.new, plot.window, plot.xy, points, polygon, rect, rug,
+       plot.new, plot.window, plot.xy, points, polygon, raster, rect, rug,
        screen, segments, smoothScatter, spineplot, split.screen, stars, stem,
        strheight, stripchart, strwidth, sunflowerplot, symbols, text,
        title, xinch, xspline, xyinch, yinch)
