@@ -1,0 +1,25 @@
+#  File src/library/graphics/R/rect.R
+#  Part of the R package, http://www.R-project.org
+#
+#  This program is free software; you can redistribute it and/or modify
+#  it under the terms of the GNU General Public License as published by
+#  the Free Software Foundation; either version 2 of the License, or
+#  (at your option) any later version.
+#
+#  This program is distributed in the hope that it will be useful,
+#  but WITHOUT ANY WARRANTY; without even the implied warranty of
+#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#  GNU General Public License for more details.
+#
+#  A copy of the GNU General Public License is available at
+#  http://www.r-project.org/Licenses/
+
+raster <- function (image, xleft, ybottom, xright, ytop,
+                    angle = 0, interpolate = TRUE, ...)
+{
+    .Internal(raster(as.raster(image),
+                     as.double(xleft), as.double(ybottom),
+                     as.double(xright), as.double(ytop),
+                     as.double(angle), as.logical(interpolate),
+                     ...))
+}
