@@ -96,5 +96,9 @@ grid.raster(redGradient, interpolate=FALSE)
 # blocky and stretched
 grid.newpage()
 grid.raster(redGradient, interpolate=FALSE, height=unit(1, "npc"))
+
+# The same raster drawn several times
+grid.newpage()
+grid.raster(0, x=1:3/4, y=1:3/4, w=.1, interp=FALSE)
 }
 \keyword{ dplot }
