@@ -269,6 +269,9 @@ NEW FEATURES
 	archives available have been split, with a new option of
 	"Rhelp10" for those from 2010.
 
+    o   New function raster() in 'graphics' package for drawing 
+        raster images.
+
 
 DEPRECATED & DEFUNCT
 
